Fix the vertical spacing issues

--- a/css/uichess-chessgame.css
+++ b/css/uichess-chessgame.css
@@ -119,6 +119,14 @@
 	font-weight: inherit;
 }
 
+.uichess-chessgame-shortVariation:before {
+	content: "(";
+}
+
+.uichess-chessgame-shortVariation:after {
+	content: ")";
+}
+
 .uichess-chessgame-move,
 .uichess-chessgame-shortComment,
 .uichess-chessgame-shortVariation {
@@ -131,20 +139,28 @@
 	margin-right: 0px;
 }
 
-.uichess-chessgame-shortVariation:before {
-	content: "(";
-}
-
-.uichess-chessgame-shortVariation:after {
-	content: ")";
-}
-
-.uichess-chessgame-longComment,
 .uichess-chessgame-longVariation.uichess-chessgame-subVariation {
-	margin-top   : 0.5em;
+	margin-left: 1.5em;
+}
+
+
+
+/******************************************************************************/
+/*** Vertical spacing ***/
+
+.uichess-chessgame-headers > div {
+	margin-bottom: 0.25em;
+}
+
+.uichess-chessgame-longVariation > div {
 	margin-bottom: 0.5em;
 }
 
-.uichess-chessgame-longVariation.uichess-chessgame-subVariation {
-	margin-left: 1.5em;
+.uichess-chessgame-headers > div:last-child,
+.uichess-chessgame-longVariation > div:last-child {
+	margin-bottom: 0px;
+}
+
+.uichess-chessgame-headers + .uichess-chessgame-body {
+	margin-top: 0.5em;
 }
